Project

General

Profile

Actions

Bug #11791

closed

idm: this statement may fall through

Added by Toomas Soome over 3 years ago. Updated over 3 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
driver - device drivers
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

Build errors with gcc 8:

    ../../common/io/idm/idm_conn_sm.c:1464:3: error: this statement may fall through [-Werror=implicit-fallthrough=]
       switch (ic->ic_state) {
       ^~~~~~
    ../../common/io/idm/idm_conn_sm.c:1481:2: note: here
      case ISCSI_OP_SCSI_CMD:
      ^~~~
    ../../common/io/idm/idm_conn_sm.c:1491:3: error: this statement may fall through [-Werror=implicit-fallthrough=]
       switch (ic->ic_state) {
       ^~~~~~
    ../../common/io/idm/idm_conn_sm.c:1507:2: note: here
      case ISCSI_OP_LOGOUT_CMD:
      ^~~~
    ../../common/io/idm/idm_conn_sm.c:1511:3: error: this statement may fall through [-Werror=implicit-fallthrough=]
       switch (ic->ic_state) {
       ^~~~~~
    ../../common/io/idm/idm_conn_sm.c:1527:2: note: here
      case ISCSI_OP_LOGIN_CMD:
      ^~~~
    cc1: all warnings being treated as errors

Testing done: build/install/boot.

  pool: zroot
 state: ONLINE
  scan: none requested
config:

        NAME                                     STATE     READ WRITE CKSUM
        zroot                                    ONLINE       0     0     0
          c0t600144F07A6B316A00005DCFD2FD0001d0  ONLINE       0     0     0

errors: No known data errors
root@test:~# format
Searching for disks...done

AVAILABLE DISK SELECTIONS:
       0. c0t600144F07A6B316A00005DCFD2FD0001d0 <SUN-COMSTAR-1.0-10.00GB>
          /scsi_vhci/disk@g600144f07a6b316a00005dcfd2fd0001
       1. c3t0d0 <VMware,-VMware Virtual S-1.0-30.00GB>
          /pci@0,0/pci15ad,1976@10/sd@0,0
       2. c3t1d0 <VMware,-VMware Virtual S-1.0-10.00GB>
          /pci@0,0/pci15ad,1976@10/sd@1,0
Specify disk (enter its number): ^D
root@test:~# 
Actions #1

Updated by Toomas Soome over 3 years ago

  • Description updated (diff)
Actions #2

Updated by Toomas Soome over 3 years ago

  • Description updated (diff)
Actions #3

Updated by Electric Monk over 3 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit 327d9711d19fe801a2788ee1cbc0f9de27f6e8b5

commit  327d9711d19fe801a2788ee1cbc0f9de27f6e8b5
Author: Toomas Soome <tsoome@me.com>
Date:   2019-11-19T16:12:57.000Z

    11791 idm: this statement may fall through
    Reviewed by: Andy Fiddaman <andy@omniosce.org>
    Reviewed by: Garrett D'Amore <garrett@damore.org>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF