11791 idm: this statement may fall through Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: Garrett D'Amore <garrett@damore.org> Approved by: Dan McDonald <danmcd@joyent.com>